fix(comment box): markdown indicator overlapping text

--- a/RaccoonBlog.Web/Content/css/styles.less
+++ b/RaccoonBlog.Web/Content/css/styles.less
@@ -1655,10 +1655,7 @@ pre[class*="language-"]:before, pre[class*="language-"]:after {
             letter-spacing: 1.1px;
             top: 1px;
             right: 1px;
-            -moz-transition: opacity 0.3s ease-in-out;
-            -o-transition: opacity 0.3s ease-in-out;
-            -webkit-transition: opacity 0.3s ease-in-out;
-            transition: opacity 0.3s ease-in-out;
+            transition: 0.3s ease-in-out;
             cursor: pointer;
 
             &:before {
@@ -1674,6 +1671,15 @@ pre[class*="language-"]:before, pre[class*="language-"]:after {
         textarea {
 
             &:focus + .lang {
+                opacity: 1;
+                top: 0;
+                right: 0;
+                transform: translateY(-100% + 1px);
+                background-color: @brand-success;
+                color: #fff;
+            }
+
+            &:hover + .lang {
                 opacity: 1;
             }
         }
@@ -1867,7 +1873,7 @@ pre[class*="language-"]:before, pre[class*="language-"]:after {
                     font-size: 85%;
                     color: @text-color;
                     border-radius: 3px;
-                    box-shadow: 0 1px 1px 0px rgba(0,0,0,.2);                    
+                    box-shadow: 0 1px 1px 0px rgba(0,0,0,.2);
                 }
 
                 pre {
